class Note:
    def __init__(self, pitch, beat, duration):
        self.pitch = pitch
        self.beat = beat
        self.duration = duration
    
